--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/node": "20.1.7",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "alchemy-sdk": "^2.8.3",
     "autoprefixer": "10.4.14",
     "daisyui": "^2.51.6",
+    "encoding": "^0.1.13",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "next": "13.4.2",
