--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
     "@rainbow-me/rainbowkit": "^1.0.0",
     "@types/node": "20.1.7",
     "@types/react": "18.2.6",
