Change .env names and update transaction window

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
-NEXT_PUBLIC_ALCHEMY_API_KEY=replaceme
+NEXT_PUBLIC_ALCHEMY_API_KEY=YOUR_ALCHEMY_API_KEY
 NEXT_PUBLIC_CHAIN_NAME=goerli
-VAULT_ADDRESS=0x000000
+NEXT_PUBLIC_ETHERSCAN_API_KEY=YOUR_ETHERSCAN_API_KEY
+# Contract address for vaulting contracts, where we are calling `vault`
+NEXT_PUBLIC_VAULT_ADDRESS=0x6023ffe1e6026cc9c2f7ed1c7ed82d57503675e7
+# Contract address we are vaulting NFTs for, ex: FirstDayOut
+NEXT_PUBLIC_VAULT_FROM_ADDRESS=0x1cc0ef1f5e8dd365768dcdea525ef223e7355361
+# Contract address that uses the vault as an extension and we mint NFTS from when holders vault
+NEXT_PUBLIC_SBT_ADDRESS=0xadf6df2833354fa52478e6dc690ab08fbc905af0
