--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.2.4",
     "alchemy-sdk": "^2.8.3",
     "autoprefixer": "10.4.14",
+    "classnames": "^2.3.2",
     "daisyui": "^2.51.6",
     "date-fns": "^2.30.0",
     "encoding": "^0.1.13",
