--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "classnames": "^2.3.2",
     "daisyui": "^2.51.6",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.9",
     "encoding": "^0.1.13",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
