--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "typescript": "5.0.4",
     "viem": "^0.3.26",
     "wagmi": "^1.0.5"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.199"
   }
 }
