--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "encoding": "^0.1.13",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "hamburger-react": "^2.5.0",
     "lodash": "^4.17.21",
     "next": "13.4.2",
     "postcss": "8.4.23",
