--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "sst bind next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -18,6 +18,7 @@
     "abi-decoder": "^2.4.0",
     "alchemy-sdk": "^2.10.1",
     "autoprefixer": "10.4.14",
+    "axios": "^1.6.2",
     "classnames": "^2.3.2",
     "daisyui": "^2.51.6",
     "date-fns": "^2.30.0",
@@ -27,7 +28,7 @@
     "eslint-config-next": "13.4.2",
     "hamburger-react": "^2.5.0",
     "lodash": "^4.17.21",
-    "next": "13.4.2",
+    "next": "13.4.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -39,6 +40,9 @@
     "wagmi": "^1.0.5"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.199"
+    "@types/lodash": "^4.14.199",
+    "aws-cdk-lib": "^2.109.0",
+    "constructs": "10.2.69",
+    "sst": "^2.36.1"
   }
 }
