--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.6.2",
     "classnames": "^2.3.2",
+    "crypto-js": "^4.2.0",
     "daisyui": "^2.51.6",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
@@ -27,6 +28,8 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "hamburger-react": "^2.5.0",
+    "kysely": "^0.26.3",
+    "kysely-data-api": "^0.2.1",
     "lodash": "^4.17.21",
     "next": "13.4.4",
     "postcss": "8.4.23",
@@ -36,10 +39,12 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
+    "uuidv4": "^6.2.13",
     "viem": "^0.3.26",
     "wagmi": "^1.0.5"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.1",
     "@types/lodash": "^4.14.199",
     "aws-cdk-lib": "^2.109.0",
     "constructs": "10.2.69",
